--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,8 +20,20 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    header
-    nav
+    header.pb-4
+      nav.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
+        .container
+          = link_to 'book_match', :root, class: 'navbar-brand text-decoration-none'
+          button.navbar-toggler type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation"
+            span.navbar-toggler-icon
+          .collapse.navbar-collapse id="navbar-content"
+            ul.navbar-nav.ml-auto
+              li.nav-item
+                = link_to '本の一覧', '#', class: 'nav-link'
+              li.nav-item
+                = link_to '本を探す', '#', class: 'nav-link'
+              li.nav-item
+                = link_to 'マイページ', '#', class: 'nav-link'
     main
       = yield
     footer
