implement books-index-page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta http-equiv="content-language" content="ja"
 
-    meta name="description" content="本と人をつなぐ、古本マッチングサイトのbook_matchです。"
+    meta name="description" content="好きなものが引き合わせる。作品マッチングサイトのbook_matchです。"
 
     /![if lt IE 9]
     script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"
@@ -29,7 +29,7 @@ html
           .collapse.navbar-collapse id="navbar-content"
             ul.navbar-nav.ml-auto
               li.nav-item
-                = link_to '本の一覧', '#', class: 'nav-link'
+                = link_to '本の一覧', books_path, class: 'nav-link'
               li.nav-item
                 = link_to '本を探す', '#', class: 'nav-link'
               li.nav-item
