--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,16 @@
  *= require_self
  */
 @import "bootstrap";
+
+body {
+  font-size: 13px;
+  color: #666666;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+.table {
+  color: #666666;
+}
