--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,4 +1,14 @@
-h1
-  | Book#index
-p
-  | Find me in app/views/book/index.html.erb
+.container
+
+  h1.mb-3 本の一覧
+
+  table.table.table-bordered
+    thead.thead-light
+      tr
+        th タイトル
+        th 著者
+    tbody
+      - @books.each do |book|
+        tr
+          td = book.title
+          td = book.author
