--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,13 +2,13 @@
 
   h1.mb-3 本の一覧
 
-  table.table.table-bordered
+  table.table.table-bordered.table-hover
     thead.thead-light
       tr
         th タイトル
         th 著者
     tbody
       - @books.each do |book|
-        tr
+        tr.pointer onclick='window.location="/books/#{book.id}"' role="link"
           td = book.title
           td = book.author
