--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta http-equiv="content-language" content="ja"
 
-    meta name="description" content="好きなものが引き合わせる。作品マッチングサイトのbook_matchです。"
+    meta name="description" content="好きな本が引き合わせる。書籍マッチングサイトのbook_matchです。"
 
     /![if lt IE 9]
     script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"
@@ -20,7 +20,7 @@ html
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    header.pb-4
+    header.pb-3.pb-sm-4
       nav.navbar.navbar-expand-md.navbar-dark.bg-dark.sticky-top
         .container
           = link_to 'book_match', :root, class: 'navbar-brand text-decoration-none'
@@ -29,11 +29,14 @@ html
           .collapse.navbar-collapse id="navbar-content"
             ul.navbar-nav.ml-auto
               li.nav-item
-                = link_to '本の一覧', books_path, class: 'nav-link'
+                = link_to '書籍一覧', books_path, class: 'nav-link'
               li.nav-item
-                = link_to '本を探す', '#', class: 'nav-link'
+                = link_to '書籍検索', '#', class: 'nav-link'
+              li.nav-item
+                = link_to '書籍登録', new_book_path, class: 'nav-link'
               li.nav-item
                 = link_to 'マイページ', '#', class: 'nav-link'
     main
       = yield
-    footer
+    footer.text-center.mt-5
+      | &#169; 2019 book_match
