--- a/app/views/books/_form.html.slim
+++ b/app/views/books/_form.html.slim
@@ -12,4 +12,4 @@
     = form.label :author, '著者'
     = form.text_field :author, class: 'form-control'
   .form-group
-    = form.submit '情報送信', data: {disable_with: '処理中…'}, class: 'btn btn-default'
+    = form.submit '登録', data: {disable_with: '処理中…'}, class: 'btn btn-primary'
