--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     meta name="viewport" content="width=device-width, initial-scale=1"
     meta http-equiv="content-language" content="ja"
 
-    meta name="description" content="好きな本が引き合わせる。書籍マッチングサイトのbook_matchです。"
+    meta name="description" content="書籍レビューサイトのbook_matchです。"
 
     /![if lt IE 9]
     script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"
