fix margin-bottom of footer

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,5 +38,5 @@ html
                 = link_to 'マイページ', '#', class: 'nav-link'
     main
       = yield
-    footer.text-center.mt-5
+    footer.text-center.my-5
       | &#169; 2019 book_match
