--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -29,5 +29,6 @@
               = book.created_at
             td
               = book.updated_at
+    = paginate @books
   - else
     .mt-5.text-center 該当のデータはございません。
