--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,23 +28,23 @@ html
             span.navbar-toggler-icon
           .collapse.navbar-collapse id="navbar-content"
             ul.navbar-nav.ml-auto
-              li.nav-item
+              li.nav-item.pt-1
                 = link_to '書籍一覧', books_path, class: 'nav-link'
-              li.nav-item
+              li.nav-item.pt-1
                 = link_to '書籍検索', '#', class: 'nav-link'
-              li.nav-item
+              li.nav-item.pt-1
                 = link_to '書籍登録', new_book_path, class: 'nav-link'
-              li.nav-item
-                = link_to 'マイページ', '#', class: 'nav-link mr-2'
+              li.nav-item.pt-1.mr-3
+                = link_to 'マイページ', '#', class: 'nav-link'
               .d-none.d-sm-block
                 li.nav-item
-                  = form_with(class: 'form-inline') do |form|
-                    = form.text_field :title, class: 'form-control mr-2', placeholder: '検索...'
+                  = search_form_for @search, url: books_path, class: 'form-inline' do |form|
+                    = form.text_field :title_cont, class: 'form-control mr-2', placeholder: '検索...'
                     = form.submit '検索', class: 'btn btn-outline-info'
               .d-sm-none.d-block
                 li.nav-item
-                  = form_with do |form|
-                    = form.text_field :title, class: 'form-control mr-2 mt-2', placeholder: '検索...'
+                  = search_form_for @search, url: books_path do |form|
+                    = form.text_field :title_cont, class: 'form-control mr-2 mt-2', placeholder: '検索...'
                     = form.submit '検索', class: 'btn btn-outline-info mt-2'
     main
       = yield
